UI: added inset shadow and fixed button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,9 @@
 .color_box {
     height: 200px;
     width: 400px;
-    border: 3px solid white;
+    border: 4px solid white;
     border-radius: 8px;
+    box-shadow: inset 0 0 15px rgba(87, 87, 87, 0.47);
 }
 
 .choice_btn {
