--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ h1 {
 }
 
 button {
+    flex: 1;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -46,6 +47,7 @@ button {
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
+    font-weight: bold;
 }
 button:hover {
     border-color: #646cff;
